--- a/src/components/Stopwatch/Stopwatch.css
+++ b/src/components/Stopwatch/Stopwatch.css
@@ -1,40 +1,40 @@
 .timer {
-    background-color: #a892ee;
-    padding: 1rem;
-    margin: 2rem auto;
-    width: 50rem;
-    max-width: 95%;
-    border-radius: 12px;
-    text-align: center;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-  }
-  
-  .timer-button {
-    font-weight: lighter;
-    cursor: pointer;
-    padding: 1rem 2rem;
-    border: 1px solid #40005d;
-    background-color: #40005d;
-    color: white;
-    border-radius: 5px;
-    margin: auto;
-    margin-top: 20px;
-    justify-content: space-between;
-  }
-  
-  .timer button:hover,
-  .timer button:active {
-    background-color: #510674;
-    border-color: #510674;
-  }
-  
-  .timer button.alternative {
-    color: #220131;
-    border-color: transparent;
-    background-color: transparent;
-  }
-  
-  .timer button.alternative:hover,
-  .timer button.alternative:active {
-    background-color: #ddb3f8;
-  }
+  background-color: white;
+  padding: 1rem;
+  margin: 2rem auto;
+  width: 50rem;
+  max-width: 95%;
+  border-radius: 12px;
+  text-align: center;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+}
+
+.timer-button {
+  font-weight: lighter;
+  cursor: pointer;
+  padding: 1rem 2rem;
+  border: 1px solid #40005d;
+  background-color: #40005d;
+  color: white;
+  border-radius: 5px;
+  margin: auto;
+  margin-top: 20px;
+  justify-content: space-between;
+}
+
+.timer button:hover,
+.timer button:active {
+  background-color: #510674;
+  border-color: #510674;
+}
+
+.timer button.alternative {
+  color: #220131;
+  border-color: transparent;
+  background-color: transparent;
+}
+
+.timer button.alternative:hover,
+.timer button.alternative:active {
+  background-color: #ddb3f8;
+}
